// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at

//   http://www.apache.org/licenses/LICENSE-2.0

// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.airavata.datacatalog.api";


message DataProduct {
    string data_product_id = 1;
    optional string parent_data_product_id = 2;
    string name = 3;
    optional string metadata = 4;
}

message DataProductCreateRequest {
    DataProduct data_product = 1;
}
message DataProductCreateResponse {
    DataProduct data_product = 1;
}

service DataCatalogAPIService {
    rpc createDataProduct(DataProductCreateRequest) returns (DataProductCreateResponse){}
}
